<resources>
    <string name="app_name">Parstagram</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="asterisk_required">All fields marked with an asterisk (*) are required.</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Username_asterisk">Username*</string>
    <string name="Password_asterisk">Password*</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="email_hint">john@example.com</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="verifying_credentials">Verifying credentials...</string>
    <string name="signup_failed">Signup failed, please try again</string>
    <string name="login_failed">Login failed</string>
    <string name="welcome">Welcome to Parstagram,</string>
    <string name="login_text">Already have an account?</string>
    <string name="signup_text">Want to create a new account?</string>
    <string name="compose">Compose</string>
    <string name="timeline">Timeline</string>
    <string name="caption">Caption</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="retake_picture">Retake Picture</string>
    <string name="post">Post</string>
    <string name="error_publishing_post">Error publishing post</string>
    <string name="caption_error">Caption can\'t be empty</string>
    <string name="image_error">You must include an image</string>
    <string name="publishing_post">Publishing your post...</string>
    <string name="published">Published!</string>
    <string name="error_camera_photo">Something went wrong taking the picture, please try again.</string>
    <string name="error_gallery_photo">Something went wrong uploading the picture, please try again</string>
    <string name="no_camera">You have no camera app that Parstagram can use to take a photo.</string>
    <string name="no_gallery">You have no gallery app that Parstagram can use to upload a photo.</string>
    <string name="details">Details</string>
</resources>